--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/alfredo.html">Alfredo</a>
+        <ul>
+        <li><a href="recipes/alfredo.html">Alfredo</a></li>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/orangechicken.html">Orange Chicken</a></li>
+        <li><a href="recipes/applepie.html">Apple Pie</a></li>
+        </ul>
     </body>
 
 </html>
